# nimbro_picking

./: LICENSE  README.md
apc_object_perception/apc_6dpose/: CMakeLists.txt  package.xml
apc_object_perception/apc_6dpose/cmake/: FindEDT.cmake  FindMKL.cmake
apc_object_perception/apc_6dpose/src/: apc_6dpose.cpp  detection_linemod_apc_data.cpp  grasp_annotation.cpp  recognizer.cpp  recognizer.h  test_registration.cpp  train_linemod_apc_data.cpp
apc_object_perception/apc_annotation/: CMakeLists.txt  package.xml
apc_object_perception/apc_annotation/src/: annotation_model.cpp  annotation_model.h  annotation_view.cpp  annotation_view.h  apc_annotation.cpp  apc_annotation.h  apc_annotation.ui  item_dialog.cpp  item_dialog.h  item_dialog.ui  item_model.cpp  item_model.h  main.cpp
apc_object_perception/apc_capture/: CMakeLists.txt  apc_capture.launch  nodelet_plugins.xml  package.xml
apc_object_perception/apc_capture/launch/: capture_data.sh  registration.launch
apc_object_perception/apc_capture/msg/: BoxCoordinates.msg
apc_object_perception/apc_capture/resource/: cam.ini
apc_object_perception/apc_capture/src/: aic.cpp  apc_features.cpp  apc_tote_features.cpp  box_reg_main.cpp  box_registration.cpp  features_exe.cpp  play_bag.cpp  testBed.cpp  tote_features_exe.cpp  utils.cpp
apc_object_perception/apc_densecap/: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
apc_object_perception/apc_densecap/densecap/: .gitignore  .kateconfig  LICENSE.md  README.md  compare_training.py  evaluate_model.lua  models_detection.lua  parse_centauro_results.py  parse_results.py  preprocess_apc.py  preprocess_apc_splits.sh  preprocess_centauro.py  preprocess_centauro_imagenet.py  preprocess_centauro_splits.sh  read_splits.lua  run_centauro_detection.lua  run_detection.lua  split_apc.py  train.lua  train.sh  train_centauro.sh  train_centauro_cross_modal.sh  train_cross_modal.lua  train_cross_modal.sh  train_detection.lua  train_opts.lua  view_dataset.lua
apc_object_perception/apc_densecap/launch/: recognition.launch
apc_object_perception/apc_densecap/lua/: apc.lua  apc_save_features.lua
apc_object_perception/apc_densecap/python/: apc_densecap.py  choose_parameters.py  generate_training.py  rectangle.py
apc_object_perception/apc_densecap/src/: apc_densecap.cpp  parameters.h  proposal_generator.cpp  proposal_generator.h  rectangle.cpp  rectangle.h  sample_db.cpp  sample_db.h  svm.cpp  svm.h  train.cpp
apc_object_perception/apc_objects/: CMakeLists.txt  package.xml
apc_object_perception/apc_objects/objects/: barkely_hide_bones.yaml  cherokee_easy_tee_shirt.yaml  clorox_utility_brush.yaml  cloud_b_plush_bear.yaml  command_hooks.yaml  cool_shot_glue_sticks.yaml  crayola_24_ct.yaml  creativity_chenille_stems.yaml  dasani_water_bottle.yaml  dove_beauty_bar.yaml  dr_browns_bottle_brush.yaml  easter_turtle_sippy_cup.yaml  elmers_washable_no_run_school_glue.yaml  expo_dry_erase_board_eraser.yaml  fiskars_scissors_red.yaml  fitness_gear_3lb_dumbbell.yaml  folgers_classic_roast_coffee.yaml  hanes_tube_socks.yaml  i_am_a_bunny_book.yaml  jane_eyre_dvd.yaml  kleenex_paper_towels.yaml  kleenex_tissue_box.yaml  kyjen_squeakin_eggs_plush_puppies.yaml  laugh_out_loud_joke_book.yaml  oral_b_toothbrush_green.yaml  peva_shower_curtain_liner.yaml  platinum_pets_dog_bowl.yaml  rawlings_baseball.yaml  rolodex_jumbo_pencil_cup.yaml  safety_first_outlet_plugs.yaml  scotch_bubble_mailer.yaml  scotch_duct_tape.yaml  soft_white_lightbulb.yaml  staples_index_cards.yaml  ticonderoga_12_pencils.yaml  up_glucose_bottle.yaml  womens_knit_gloves.yaml  woods_extension_cord.yaml
apc_object_perception/apc_objects/src/: apc_objects.cpp
apc_object_perception/apc_perception/: CMakeLists.txt  nodelet_plugins.xml  package.xml  perception.launch
apc_object_perception/apc_perception/action/: ApcPerception.action
apc_object_perception/apc_perception/resource/: colors_apc.lut
apc_object_perception/apc_perception/src/: color_lut.cpp  perception_nodelet.cpp  perception_nodelet_grasp.cpp
apc_object_perception/apc_segmentation/: .gitignore  CMakeLists.txt  README.md  package.xml
apc_object_perception/apc_segmentation/lua/: apc.lua  apc_dataset.lua  apc_eval.lua  apc_overfeat.lua  apc_summary.lua  apc_test.lua  apc_train.lua
apc_object_perception/apc_segmentation/matlab/: colorizeSeg.m  createAPCDataset.m  createAPCSegMask.m  cropBox.m  getAPCClassIDFromFilename.m  getAPCDataDir.m  getAPCObjList.m  getColorFromID.m  getDensecapProbs.m  getEdges.m  getNumClasses.m  getRBOPosteriors.m  gray2rgb.m  isAnnotated.m  maxConvert.m  segmentBalls.m
depth_filler/: CMakeLists.txt  nodelet_plugin.xml  package.xml
depth_filler/cmake/: FindKLU.cmake
depth_filler/launch/: depth_filler.launch
depth_filler/src/: depth_filler.cpp  depth_filler_nodelet.cpp  depth_filler_nodelet.h  domain_transform.cpp  eigen_klu.h  fill_pcd.cpp
nimbro_actuators/actuator_msgs/: CMakeLists.txt  package.xml
nimbro_actuators/drc_interface/: CMakeLists.txt  package.xml
nimbro_actuators/rqt_servo_diagnostics/: CMakeLists.txt  package.xml  rqt_plugin.xml
nimbro_fsm/: CMakeLists.txt  package.xml  rqt_plugins.xml
nimbro_fsm/gui/: CMakeLists.txt  buttonview.cpp  buttonview.h  jumpstatedialog.cpp  jumpstatedialog.h  jumpstatedialog.ui  statemachine_gui.cpp  statemachine_gui.h  statemachine_gui.ui
nimbro_fsm/msg/: Info.msg  Status.msg
nimbro_fsm/src/: fsm.cpp  fsm_ros.cpp  test.cpp
nimbro_fsm/srv/: ChangeState.srv
nimbro_keyframe_server/collision_detection/: CMakeLists.txt  package.xml
nimbro_keyframe_server/nimbro_keyframe_editor/: CMakeLists.txt  package.xml  rviz_plugin.xml
nimbro_keyframe_server/nimbro_keyframe_server/: CMakeLists.txt  package.xml
nimbro_realsense/: CMakeLists.txt  nodelet_plugin.xml  package.xml
nimbro_realsense/launch/: camera.launch  depth_fusion.launch  stereo.launch  stereo_proc.launch
nimbro_realsense/src/: camera.cpp  camera.h  convert_metric.cpp  convert_metric.h  depth_fusion.cpp  depth_fusion.h  measure_latency.cpp  realsense.cpp  realsense.h  stereo.cpp  stereo.h
(+429 files in other folders)
