<package format="2">
	<name>apc_6dpose</name>
	<description>Object recognition for APC using 6D pose estimation with v4r library</description>
	<version>0.0.1</version>
	<license>BSD</license>

	<maintainer email="s6amuno@uni-bonn.de">Aura Munoz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>nodelet</depend>
	<depend>apc_capture</depend>
</package>

