<package format="2">
	<name>apc_capture</name>
	<version>0.0.1</version>
	<description>
		AIS Image Capture Tool
	</description>

	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>cv_bridge</depend>
	<depend>image_transport</depend>
	<depend>pcl_ros</depend>
	<depend>nodelet</depend>
	<depend>tf</depend>
	<depend>nimbro_keyframe_server</depend>
	<depend>apc_objects</depend>
	<depend>apc_shelf_model</depend>

	<export>
		<nodelet plugin="${prefix}/nodelet_plugins.xml" />
	</export>
</package>
