<package format="2">
	<name>actuator_msgs</name>
	<description>Common diagnostic messages and services for actuator control</description>
	<version>0.0.1</version>
	<license>BSD</license>
	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>message_generation</depend>
	<depend>std_msgs</depend>
</package>
