<package format="2">
  <name>nimbro_collision_detection</name>
  <version>0.0.0</version>
  <description>The centauro_nimbro_collision_detection package</description>

  <maintainer email="lrodehut@todo.todo">topalido</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>config_server</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit_ros_planning</depend>
</package>
